Godot GUI/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    APOSTROPHE
    ARRAY
    AS
    CALLABLE
    CATCH
    CLONE
    CLOSETAGAL
    COMMENTS
    COMMENTS_C99
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT_DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FINALLY
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    PLUSEQUAL
    PRINT
    QUOTES
    REQUIRE_ONCE
    STATIC
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    XOR
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration
Rule 3     declaration_list -> declaration declaration_list
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> area fun_declaration
Rule 7     declaration -> header_declaration
Rule 8     declaration -> class_declaration
Rule 9     declaration -> echo_stmt
Rule 10    declaration -> selection_stmt
Rule 11    declaration -> iteration_stmt
Rule 12    declaration -> typeclass
Rule 13    echo_stmt -> echo_stmt ECHO echo_params SEMI
Rule 14    echo_stmt -> empty
Rule 15    echo_params -> echo_param
Rule 16    echo_params -> echo_param DOT echo_params
Rule 17    echo_param -> STRING
Rule 18    echo_param -> IDVAR
Rule 19    echo_param -> NUM
Rule 20    echo_param -> boolean
Rule 21    echo_param -> fun_declaration
Rule 22    echo_param -> fun_call
Rule 23    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMI
Rule 24    header_declaration -> INCLUDE LPAREN STRING RPAREN SEMI
Rule 25    class_declaration -> area CLASS ID LBLOCK attributes RBLOCK
Rule 26    class_declaration -> CLASS ID LBLOCK attributes RBLOCK
Rule 27    attributes -> attribute
Rule 28    attributes -> attribute attributes
Rule 29    attribute -> attribute area var_declaration
Rule 30    attribute -> area var_declaration
Rule 31    attribute -> attribute area fun_declaration
Rule 32    attribute -> area fun_declaration
Rule 33    attribute -> fun_declaration
Rule 34    area -> PRIVATE
Rule 35    area -> PUBLIC
Rule 36    area -> PROTECTED
Rule 37    var_declaration -> IDVAR SEMI var_declaration
Rule 38    var_declaration -> IDVAR SEMI
Rule 39    var_declaration -> TIMESTIMES IDVAR SEMI
Rule 40    var_declaration -> TIMESTIMES IDVAR SEMI var_declaration
Rule 41    var_declaration -> assing_var IGUAL NUM SEMI var_declaration
Rule 42    var_declaration -> assing_var IGUAL NUM SEMI
Rule 43    var_declaration -> assing_var IGUAL STRING SEMI var_declaration
Rule 44    var_declaration -> assing_var IGUAL STRING SEMI
Rule 45    var_declaration -> assing_var IGUAL boolean SEMI var_declaration
Rule 46    var_declaration -> assing_var IGUAL boolean SEMI
Rule 47    var_declaration -> assing_var IGUAL IDVAR SEMI var_declaration
Rule 48    var_declaration -> assing_var IGUAL IDVAR SEMI
Rule 49    var_declaration -> AMPERSANT IDVAR SEMI var_declaration
Rule 50    var_declaration -> AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
Rule 51    var_declaration -> AMPERSANT IDVAR SEMI
Rule 52    var_declaration -> assing_var IGUAL simple_expression SEMI
Rule 53    var_declaration -> fun_call SEMI
Rule 54    assing_var -> var
Rule 55    assing_var -> var ARROW ID
Rule 56    IGUAL -> EQUAL
Rule 57    IGUAL -> MUL_EQUAL
Rule 58    IGUAL -> DIV_EQUAL
Rule 59    IGUAL -> CONCAT_EQUAL
Rule 60    IGUAL -> MOD_EQUAL
Rule 61    IGUAL -> PLUS_EQUAL
Rule 62    IGUAL -> MINUS_EQUAL
Rule 63    fun_declaration -> FUNCTION ID LPAREN params RPAREN
Rule 64    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 65    fun_call -> ID LPAREN params RPAREN
Rule 66    fun_call -> assing_var LPAREN params RPAREN
Rule 67    params -> param_list
Rule 68    params -> empty
Rule 69    param_list -> param
Rule 70    param_list -> param COMMA param_list
Rule 71    param -> IDVAR
Rule 72    param -> IDVAR LBRACKET RBRACKET
Rule 73    param -> term
Rule 74    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 75    local_declarations -> local_declarations var_declaration
Rule 76    local_declarations -> empty
Rule 77    statement_list -> statement_list statement
Rule 78    statement_list -> empty
Rule 79    statement -> expression_stmt
Rule 80    statement -> compount_stmt
Rule 81    statement -> selection_stmt
Rule 82    statement -> iteration_stmt
Rule 83    statement -> return_stmt
Rule 84    statement -> class_declaration
Rule 85    statement -> echo_stmt
Rule 86    expression_stmt -> expression SEMI
Rule 87    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 88    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 89    selection -> ELSE statement
Rule 90    selection -> ELSEIF statement selection
Rule 91    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 92    selection_stmt -> CASE NUM COLON statement BREAK SEMI
Rule 93    selection_stmt -> CASE STRING COLON statement BREAK SEMI
Rule 94    selection_stmt -> DEFAULT COLON statement BREAK SEMI
Rule 95    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
Rule 96    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 97    iteration_stmt -> DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
Rule 98    return_stmt -> RETURN SEMI
Rule 99    return_stmt -> RETURN expression SEMI
Rule 100   expression -> assing_var EQUAL expression
Rule 101   expression -> simple_expression
Rule 102   expression -> assing_var EQUAL AMPERSANT IDVAR
Rule 103   expression -> expression AND expression
Rule 104   expression -> expression OR expression
Rule 105   expression -> assing_var
Rule 106   expression -> fun_call
Rule 107   var -> IDVAR
Rule 108   var -> IDVAR LBRACKET expression RBRACKET
Rule 109   simple_expression -> additive_expression relop additive_expression
Rule 110   simple_expression -> additive_expression
Rule 111   relop -> LESS
Rule 112   relop -> LESSEQUAL
Rule 113   relop -> GREATER
Rule 114   relop -> GREATEREQUAL
Rule 115   relop -> DEQUAL
Rule 116   relop -> DISTINT
Rule 117   relop -> ISEQUAL
Rule 118   relop -> IS_IDENTICAL
Rule 119   relop -> IS_NOT_IDENTICAL
Rule 120   relop -> SR_EQUAL
Rule 121   relop -> SL_EQUAL
Rule 122   relop -> AND_EQUAL
Rule 123   relop -> OR_EQUAL
Rule 124   relop -> XOR_EQUAL
Rule 125   relop -> CONCAT_EQUAL
Rule 126   additive_expression -> additive_expression addop term
Rule 127   additive_expression -> term
Rule 128   additive_expression -> term MINUSMINUS
Rule 129   additive_expression -> term PLUSPLUS
Rule 130   additive_expression -> fun_call
Rule 131   addop -> PLUS
Rule 132   addop -> MINUS
Rule 133   term -> term mulop factor
Rule 134   term -> factor
Rule 135   mulop -> TIMES
Rule 136   mulop -> DIVIDE
Rule 137   factor -> LPAREN expression RPAREN
Rule 138   factor -> var
Rule 139   factor -> NUM
Rule 140   factor -> STRING
Rule 141   factor -> boolean
Rule 142   factor -> IDVAR LPAREN args RPAREN
Rule 143   args -> args_list
Rule 144   args -> empty
Rule 145   args -> VOID
Rule 146   args_list -> args_list COMMA expression
Rule 147   args_list -> expression
Rule 148   boolean -> TRUE
Rule 149   boolean -> FALSE
Rule 150   typeclass -> ID IDVAR EQUAL NEW constructor SEMI
Rule 151   typeclass -> IDVAR EQUAL NEW constructor SEMI
Rule 152   constructor -> ID LPAREN RPAREN
Rule 153   constructor -> ID LPAREN args RPAREN
Rule 154   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 49 50 51 102
AND                  : 103
AND_EQUAL            : 122
APOSTROPHE           : 
ARRAY                : 
ARROW                : 55
AS                   : 
BREAK                : 92 93 94
CALLABLE             : 
CASE                 : 92 93
CATCH                : 
CLASS                : 25 26
CLONE                : 
CLOSETAG             : 1
CLOSETAGAL           : 
COLON                : 92 93 94
COMMA                : 70 146
COMMENTS             : 
COMMENTS_C99         : 
CONCAT_EQUAL         : 59 125
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 94
DEQUAL               : 115
DIE                  : 
DISTINT              : 116
DIVIDE               : 136
DIV_EQUAL            : 58
DO                   : 97
DOT                  : 16
DOT_DOT              : 
ECHO                 : 13
ELSE                 : 89
ELSEIF               : 90
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 56 100 102 150 151
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 149
FINALLY              : 
FOR                  : 95
FOREACH              : 
FUNCTION             : 63 64
GLOBAL               : 
GOTO                 : 
GREATER              : 113
GREATEREQUAL         : 114
HASHTAG              : 
ID                   : 25 26 55 63 64 65 150 152 153
IDVAR                : 18 37 38 39 40 47 48 49 50 50 51 71 72 102 107 108 142 150 151
IF                   : 87 88
IMPLEMENTS           : 
INCLUDE              : 24
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTERFACE            : 
ISEQUAL              : 117
ISSET                : 
IS_IDENTICAL         : 118
IS_NOT_IDENTICAL     : 119
LBLOCK               : 25 26 74 97
LBRACKET             : 72 108
LESS                 : 111
LESSEQUAL            : 112
LIST                 : 
LPAREN               : 23 24 63 64 65 66 87 88 91 95 96 97 137 142 152 153
MINUS                : 132
MINUSEQUAL           : 
MINUSMINUS           : 128
MINUS_EQUAL          : 62
MOD_EQUAL            : 60
MUL_EQUAL            : 57
NAMESPACE            : 
NEW                  : 150 151
NUM                  : 19 41 42 92 139
OPENTAG              : 1
OR                   : 104
OR_EQUAL             : 123
PLUS                 : 131
PLUSEQUAL            : 
PLUSPLUS             : 129
PLUS_EQUAL           : 61
PRINT                : 
PRIVATE              : 34
PROTECTED            : 36
PUBLIC               : 35
QUOTES               : 
RBLOCK               : 25 26 74 97
RBRACKET             : 72 108
REQUIRE              : 23
REQUIRE_ONCE         : 
RETURN               : 98 99
RPAREN               : 23 24 63 64 65 66 87 88 91 95 96 97 137 142 152 153
SEMI                 : 13 23 24 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 86 92 93 94 95 97 98 99 150 151
SL_EQUAL             : 121
SR_EQUAL             : 120
STATIC               : 
STRING               : 17 23 24 43 44 93 140
SWITCH               : 91
THROW                : 
TIMES                : 135
TIMESTIMES           : 39 40
TRAIT                : 
TRUE                 : 148
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VOID                 : 145
WHILE                : 96 97
XOR                  : 
XOR_EQUAL            : 124
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

IGUAL                : 41 42 43 44 45 46 47 48 50 52
additive_expression  : 95 109 109 110 126
addop                : 126
area                 : 6 25 29 30 31 32
args                 : 142 153
args_list            : 143 146
assing_var           : 41 42 43 44 45 46 47 48 52 66 100 102 105
attribute            : 27 28 29 31
attributes           : 25 26 28
boolean              : 20 45 46 141
class_declaration    : 8 84
compount_stmt        : 64 80
constructor          : 150 151
declaration          : 2 3
declaration_list     : 1 3
echo_param           : 15 16
echo_params          : 13 16
echo_stmt            : 9 13 74 74 74 85
empty                : 14 68 76 78 144
expression           : 86 87 88 95 96 97 99 100 103 103 104 104 108 137 146 147
expression_stmt      : 79
factor               : 133 134
fun_call             : 22 53 106 130
fun_declaration      : 5 6 21 31 32 33
header_declaration   : 7
iteration_stmt       : 11 82
local_declarations   : 74 75
mulop                : 133
param                : 69 70
param_list           : 67 70
params               : 63 64 65 66
program              : 0
relop                : 109
return_stmt          : 83
selection            : 88 90
selection_stmt       : 10 50 81
simple_expression    : 52 101
statement            : 77 87 88 89 90 91 92 93 94 95 96 97
statement_list       : 74 77
term                 : 73 126 127 128 129 133
typeclass            : 12
var                  : 54 55 91 138
var_declaration      : 4 29 30 37 40 41 43 45 47 49 75 95

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration declaration_list
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (37) var_declaration -> . IDVAR SEMI var_declaration
    (38) var_declaration -> . IDVAR SEMI
    (39) var_declaration -> . TIMESTIMES IDVAR SEMI
    (40) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (41) var_declaration -> . assing_var IGUAL NUM SEMI var_declaration
    (42) var_declaration -> . assing_var IGUAL NUM SEMI
    (43) var_declaration -> . assing_var IGUAL STRING SEMI var_declaration
    (44) var_declaration -> . assing_var IGUAL STRING SEMI
    (45) var_declaration -> . assing_var IGUAL boolean SEMI var_declaration
    (46) var_declaration -> . assing_var IGUAL boolean SEMI
    (47) var_declaration -> . assing_var IGUAL IDVAR SEMI var_declaration
    (48) var_declaration -> . assing_var IGUAL IDVAR SEMI
    (49) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (50) var_declaration -> . AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
    (51) var_declaration -> . AMPERSANT IDVAR SEMI
    (52) var_declaration -> . assing_var IGUAL simple_expression SEMI
    (53) var_declaration -> . fun_call SEMI
    (63) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (64) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (34) area -> . PRIVATE
    (35) area -> . PUBLIC
    (36) area -> . PROTECTED
    (23) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (24) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (25) class_declaration -> . area CLASS ID LBLOCK attributes RBLOCK
    (26) class_declaration -> . CLASS ID LBLOCK attributes RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO echo_params SEMI
    (14) echo_stmt -> . empty
    (87) selection_stmt -> . IF LPAREN expression RPAREN statement
    (88) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (91) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (92) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (93) selection_stmt -> . CASE STRING COLON statement BREAK SEMI
    (94) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (95) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
    (96) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (97) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (150) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (151) typeclass -> . IDVAR EQUAL NEW constructor SEMI
    (54) assing_var -> . var
    (55) assing_var -> . var ARROW ID
    (65) fun_call -> . ID LPAREN params RPAREN
    (66) fun_call -> . assing_var LPAREN params RPAREN
    (154) empty -> .
    (107) var -> . IDVAR
    (108) var -> . IDVAR LBRACKET expression RBRACKET

  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    IDVAR           shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 17
    FUNCTION        shift and go to state 19
    PRIVATE         shift and go to state 21
    PUBLIC          shift and go to state 22
    PROTECTED       shift and go to state 23
    REQUIRE         shift and go to state 24
    INCLUDE         shift and go to state 25
    CLASS           shift and go to state 26
    IF              shift and go to state 28
    SWITCH          shift and go to state 29
    CASE            shift and go to state 31
    DEFAULT         shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    ID              shift and go to state 20
    ECHO            reduce using rule 154 (empty -> .)
    CLOSETAG        reduce using rule 154 (empty -> .)

  ! IDVAR           [ reduce using rule 154 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 154 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 154 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 154 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 154 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 154 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 154 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 154 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 154 (empty -> .) ]
  ! CLASS           [ reduce using rule 154 (empty -> .) ]
  ! IF              [ reduce using rule 154 (empty -> .) ]
  ! SWITCH          [ reduce using rule 154 (empty -> .) ]
  ! CASE            [ reduce using rule 154 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 154 (empty -> .) ]
  ! FOR             [ reduce using rule 154 (empty -> .) ]
  ! WHILE           [ reduce using rule 154 (empty -> .) ]
  ! DO              [ reduce using rule 154 (empty -> .) ]
  ! ID              [ reduce using rule 154 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    assing_var                     shift and go to state 16
    fun_call                       shift and go to state 18
    empty                          shift and go to state 27
    var                            shift and go to state 30

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG

    CLOSETAG        shift and go to state 36


state 4

    (2) declaration_list -> declaration .
    (3) declaration_list -> declaration . declaration_list
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration declaration_list
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (37) var_declaration -> . IDVAR SEMI var_declaration
    (38) var_declaration -> . IDVAR SEMI
    (39) var_declaration -> . TIMESTIMES IDVAR SEMI
    (40) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (41) var_declaration -> . assing_var IGUAL NUM SEMI var_declaration
    (42) var_declaration -> . assing_var IGUAL NUM SEMI
    (43) var_declaration -> . assing_var IGUAL STRING SEMI var_declaration
    (44) var_declaration -> . assing_var IGUAL STRING SEMI
    (45) var_declaration -> . assing_var IGUAL boolean SEMI var_declaration
    (46) var_declaration -> . assing_var IGUAL boolean SEMI
    (47) var_declaration -> . assing_var IGUAL IDVAR SEMI var_declaration
    (48) var_declaration -> . assing_var IGUAL IDVAR SEMI
    (49) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (50) var_declaration -> . AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
    (51) var_declaration -> . AMPERSANT IDVAR SEMI
    (52) var_declaration -> . assing_var IGUAL simple_expression SEMI
    (53) var_declaration -> . fun_call SEMI
    (63) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (64) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (34) area -> . PRIVATE
    (35) area -> . PUBLIC
    (36) area -> . PROTECTED
    (23) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (24) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (25) class_declaration -> . area CLASS ID LBLOCK attributes RBLOCK
    (26) class_declaration -> . CLASS ID LBLOCK attributes RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO echo_params SEMI
    (14) echo_stmt -> . empty
    (87) selection_stmt -> . IF LPAREN expression RPAREN statement
    (88) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (91) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (92) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (93) selection_stmt -> . CASE STRING COLON statement BREAK SEMI
    (94) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (95) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
    (96) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (97) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (150) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (151) typeclass -> . IDVAR EQUAL NEW constructor SEMI
    (54) assing_var -> . var
    (55) assing_var -> . var ARROW ID
    (65) fun_call -> . ID LPAREN params RPAREN
    (66) fun_call -> . assing_var LPAREN params RPAREN
    (154) empty -> .
    (107) var -> . IDVAR
    (108) var -> . IDVAR LBRACKET expression RBRACKET

  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for CLOSETAG resolved using rule 2 (declaration_list -> declaration .)
    CLOSETAG        reduce using rule 2 (declaration_list -> declaration .)
    IDVAR           shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 17
    FUNCTION        shift and go to state 19
    PRIVATE         shift and go to state 21
    PUBLIC          shift and go to state 22
    PROTECTED       shift and go to state 23
    REQUIRE         shift and go to state 24
    INCLUDE         shift and go to state 25
    CLASS           shift and go to state 26
    IF              shift and go to state 28
    SWITCH          shift and go to state 29
    CASE            shift and go to state 31
    DEFAULT         shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    ID              shift and go to state 20
    ECHO            reduce using rule 154 (empty -> .)

  ! IDVAR           [ reduce using rule 154 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 154 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 154 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 154 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 154 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 154 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 154 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 154 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 154 (empty -> .) ]
  ! CLASS           [ reduce using rule 154 (empty -> .) ]
  ! IF              [ reduce using rule 154 (empty -> .) ]
  ! SWITCH          [ reduce using rule 154 (empty -> .) ]
  ! CASE            [ reduce using rule 154 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 154 (empty -> .) ]
  ! FOR             [ reduce using rule 154 (empty -> .) ]
  ! WHILE           [ reduce using rule 154 (empty -> .) ]
  ! DO              [ reduce using rule 154 (empty -> .) ]
  ! ID              [ reduce using rule 154 (empty -> .) ]
  ! CLOSETAG        [ reduce using rule 154 (empty -> .) ]

    declaration                    shift and go to state 4
    declaration_list               shift and go to state 37
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    assing_var                     shift and go to state 16
    fun_call                       shift and go to state 18
    empty                          shift and go to state 27
    var                            shift and go to state 30

state 5

    (4) declaration -> var_declaration .

    IDVAR           reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PROTECTED       reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)
    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    IDVAR           reduce using rule 5 (declaration -> fun_declaration .)
    TIMESTIMES      reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> fun_declaration .)
    PROTECTED       reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    DO              reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)
    CLOSETAG        reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> area . fun_declaration
    (25) class_declaration -> area . CLASS ID LBLOCK attributes RBLOCK
    (63) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (64) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt

    CLASS           shift and go to state 39
    FUNCTION        shift and go to state 19

    fun_declaration                shift and go to state 38

state 8

    (7) declaration -> header_declaration .

    IDVAR           reduce using rule 7 (declaration -> header_declaration .)
    TIMESTIMES      reduce using rule 7 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> header_declaration .)
    PRIVATE         reduce using rule 7 (declaration -> header_declaration .)
    PUBLIC          reduce using rule 7 (declaration -> header_declaration .)
    PROTECTED       reduce using rule 7 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> header_declaration .)
    INCLUDE         reduce using rule 7 (declaration -> header_declaration .)
    CLASS           reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    DO              reduce using rule 7 (declaration -> header_declaration .)
    ID              reduce using rule 7 (declaration -> header_declaration .)
    ECHO            reduce using rule 7 (declaration -> header_declaration .)
    CLOSETAG        reduce using rule 7 (declaration -> header_declaration .)


state 9

    (8) declaration -> class_declaration .
